renaming model class

--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Notes.WebApp.Models.Data>
+﻿@model IEnumerable<Notes.WebApp.Models.Note>
 
 @{ 
     Layout = "~/Views/_Layout.cshtml";
